--- a/compose-postgres/compose.yml
+++ b/compose-postgres/compose.yml
@@ -17,7 +17,7 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - postgres data:/var/lib/postgresql/data
+      - postgres_data:/var/lib/postgresql/data
     networks:
       - treinamento_net
 
